archive/test_outputs/session_outputs/report_min.txt
  File "A:\1\Magellan\main.py", line 560
    symbol=symbol,
    ^^^^^^^^^^^^^
SyntaxError: keyword argument repeated: symbol
